# -

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: settings.yaml
config/companies/: sample_company.yaml  samsung_fire.yaml
config/schema/: canonical_schema.yaml
docs/: design_doc.md  samsung_fire_analysis.md
resources/prompts/: agent_faq_prompt.yaml  comparison_prompt.yaml  customer_faq_prompt.yaml  revision_prompt.yaml  selling_point_prompt.yaml  summary_prompt.yaml
scripts/: __init__.py  analyze_and_extract.py  build_knowledge.py  build_knowledge_package.py  compare_versions.py  crawl.py  discover_samsung_fire_api.py  export_chatgpt.py  export_rag.py  run_pipeline.py
src/insurance_kb/: __init__.py
src/insurance_kb/container/: __init__.py  di_container.py
src/insurance_kb/core/: __init__.py  config_loader.py  exceptions.py  logger.py
src/insurance_kb/crawlers/: __init__.py  base_crawler.py  samsung_fire_crawler.py
src/insurance_kb/downloader/: __init__.py  base_downloader.py  pdf_downloader.py
src/insurance_kb/export/: __init__.py  base_exporter.py
src/insurance_kb/extraction/: __init__.py  base_extractor.py  pdf_analyzer.py  (+2 more)
tests/: __init__.py  conftest.py  test_base_classes.py  test_build_knowledge_package_unit.py  test_config_loader.py  test_logger.py  test_models.py  test_pdf_analyzer_mock.py  test_pipeline_runner.py  test_pymupdf_text_extractor_mock.py  test_qa_report_generator_unit.py  test_samsung_fire_live.py  test_samsung_fire_mock.py  test_samsung_fire_unit.py
(+41 files in other folders)
